--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -50,7 +50,7 @@
         <button ion-item color="secondary" class="help-button" (tap)="sendComment()">{{'comment_button' | translate}}</button>
       </ion-item>
       <ion-item>
-        <button ion-item color="secondary" class="clock-button" (tap)="toggleClock()" (press)="clockHelp()">{{'show_clock' | translate}}</button>
+        <button ion-item color="secondary" class="resync-button" (tap)="syncData()" (press)="syncHelp()">{{'show_clock' | translate}}</button>
       </ion-item>
     </ion-item-group>
   </ion-list>
