--- a/src/pages/hrs-summary/hrs-summary.html
+++ b/src/pages/hrs-summary/hrs-summary.html
@@ -1,13 +1,13 @@
 <ion-header>
   <ion-toolbar>
 	    <ion-buttons start>
-	      <button ion-button icon-only (click)="goHome()">
+	      <button ion-button icon-only (tap)="goHome()">
 	        <ion-icon name="home"></ion-icon>
 	      </button>
 	    </ion-buttons>
     	<ion-title>{{title}}</ion-title>
 	    <ion-buttons end>
-      <button ion-button color="light" icon-only (click)="terminateApp()">
+      <button ion-button color="light" icon-only (tap)="terminateApp()">
         <ion-icon name="close" ></ion-icon>
       </button>
 	    </ion-buttons>
