--- a/src/pages/popover-template/popover-template.html
+++ b/src/pages/popover-template/popover-template.html
@@ -24,5 +24,5 @@
    <!-- <p class="popover-contents">{{popoverData | translate}}</p> -->
    <!-- <p class="popover-contents" [innerHTML]="popoverData | safe: 'html'"></p> -->
    <!-- <p class="popover-contents" [innerHTML]="popoverData | safe: 'html'"></p> -->
-   <button ion-button block color="primary" (click)="closePopover()">OK</button>
+   <button ion-button block color="primary" (tap)="closePopover()">OK</button>
  </ion-content>
